# OKIOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
include/engine/: brain.hpp  camera.h  engine.hpp  input.hpp  mesh.hpp  terrain.hpp  transform.hpp  world.hpp
include/engine/creature/: creature.hpp  mesh.hpp
include/engine/entity/: entity.hpp
include/engine/shader/: shader.hpp  shader_utils.hpp
res/shaders/: def.vert  phong.frag  phong.vert
src/: brain.cpp  camera.cpp  engine.cpp  main.cpp  mesh.cpp  transform.cpp  world.cpp
src/creature/: creature.cpp  mesh.cpp
src/shader/: shader.cpp
src/terrain/: terrain.cpp
